apps/production/traefik/traefik-sso-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-sso
  namespace: traefik
spec:
  template:
    spec:
      containers:
      - name: traefik-sso
